# pi_math

./: Cargo.toml
cg2d/: Cargo.toml
cg2d/src/: lib.rs  util.rs
cg2d/src/boolean/: mod.rs
cg2d/src/boolean/boolean/: compare_segments.rs  compute_fields.rs  connect_edges.rs  divide_segment.rs  fill_queue.rs  helper.rs  mod.rs  possible_intersection.rs  segment_intersection.rs  signed_area.rs  subdivide_segments.rs  sweep_event.rs
cg2d/src/boolean/splay/: mod.rs
cg2d/src/geo2d/: mod.rs
cgmath/: Cargo.toml
collision/: Cargo.toml
color/: Cargo.toml
color/src/: lib.rs
hash_value/src/: lib.rs
octree/: Cargo.toml
octree/src/: lib.rs  oct_helper.rs  quad_helper.rs
rect_map/: Cargo.toml
rect_map/src/: lib.rs
spatialtree/: Cargo.toml
spatialtree/src/: lib.rs  oct_helper.rs  quad_helper.rs
triangulation/: Cargo.toml
triangulation/src/: lib.rs
