[package]
name = "cg2d"
version = "0.1.0"
authors = ["yineng <dev@dev.com>"]

[dependencies]
slab = { path = "../../pi_lib/slab" }
heap = { path = "../../pi_lib/heap" }
fx_hashmap = { path = "../../pi_lib/fx_hashmap" }
cgmath = { path = "../cgmath" }
collision = { path = "../collision" }
num-traits = "*"

[dev-dependencies]
rand = "*"